app-of-apps/apps/harbor/networks/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor
  namespace: storage-system
spec:
  gateways:
    - istio-system/default
  hosts:
    - harbor.kingbj0429.com
  http:
    - route:
        - destination:
            host: harbor
            port:
              number: 80
            subset: stable
          weight: 100
